--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "framer-motion": "^11.2.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "three": "^0.161.0"
+    "three": "^0.161.0",
+    "three-mesh-bvh": "^0.8.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
