--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,6 @@
 {
-  "builds": [{ "src": "package.json", "use": "@vercel/static-build" }],
-  "routes": [{ "src": "/(.*)", "dest": "/" }]
+  "output": "static",
+  "routes": [
+    { "src": "/(.*)", "dest": "/" }
+  ]
 }
