--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "three-mesh-bvh": "^0.8.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^5.1.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
-    "vite": "^5.0.0",
-    "@vitejs/plugin-react": "^5.1.0"
+    "vite": "^7.1.12"
   }
 }
