Update vercel.json to use statiRestore builds property in vercel.json and remove output property causing schema errorc build configuration

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,4 @@
 {
-  "output": "static",
-  "routes": [
-    { "src": "/(.*)", "dest": "/" }
-  ]
+  "builds": [{ "src": "package.json", "use": "@vercel/static-build" }],
+  "routes": [{ "src": "/(.*)", "dest": "/" }]
 }
