--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   "dependencies": {
     "@react-three/drei": "^9.86.4",
     "@react-three/fiber": "^8.15.13",
+    "d3-geo": "^3.1.1",
     "framer-motion": "^11.2.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-simple-maps": "^3.0.0",
+    "react-tsparticles": "^2.12.2",
     "three": "^0.161.0",
-    "three-mesh-bvh": "^0.8.0"
+    "three-mesh-bvh": "^0.8.0",
+    "topojson-client": "^3.1.0",
+    "tsparticles": "^3.9.1",
+    "tsparticles-engine": "^2.12.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.1.0",
